# mcp-axum

./: .clippy.toml  .dockerignore  .gitignore  API_DESIGN_ANALYSIS.md  CHANGELOG.md  CLIENTS.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DESIGN_IMPROVEMENTS.md  Dockerfile  ECOSYSTEM_REVIEW.md  OLD_REPO_STYLE_ANALYSIS.md  PUBLISHING_REVIEW.md  RANK_EVAL_CHANGES.md  RANK_EVAL_UPDATES.md  README.md  SUMMARY.md
.github/workflows/: audit.yml  ci.yml
docs/archive/: DOCUMENTATION_ISSUES.md  ECOSYSTEM_REVIEW.md  IMPROVEMENTS.md  NEXT_STEPS.md  PUBLISHING_REVIEW.md  README.md  SUMMARY.md  USER_ANALYSIS.md
examples/: advanced_server.rs  api_integration.rs  auth_middleware.rs  basic_server.rs  builder_pattern.rs  configuration.rs  database_tool.rs  deployment_example.rs  filesystem_resource.rs  graceful_shutdown.rs  utils_example.rs
src/: config.rs  error.rs  lib.rs  macros.rs  prompt.rs  resource.rs  schema.rs  server.rs  testing.rs  tool.rs  tool_error.rs  utils.rs  validation.rs
tests/: comprehensive_integration_test.rs  concurrent_test.rs  config_test.rs  e2e_test.rs  edge_cases_test.rs  error_context_test.rs  error_recovery_test.rs  integration_test.rs  performance_test.rs  real_world_test.rs  schema_test.rs  security_test.rs  server_test.rs  stress_test.rs  timeout_test.rs  validation_edge_cases_test.rs  validation_test.rs
