[package]
name = "mcp-axum"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "HTTP-based MCP server framework for Rust, built on axum"
keywords = ["mcp", "model-context-protocol", "axum", "server", "agent", "ai"]
categories = ["web-programming", "api-bindings"]
repository = "https://github.com/arclabs561/mcp-axum"
homepage = "https://docs.rs/mcp-axum"
documentation = "https://docs.rs/mcp-axum"
readme = "README.md"
authors = ["Arc <attobop@gmail.com>"]

[lib]
# proc-macro = true  # Commented out - this is a library crate, not a proc-macro crate
# Proc macros will be in a separate mcp-axum-macros crate

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
jsonschema = "0.19"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
testing = []
# Future: macros feature for procedural macro support via mcp-axum-macros crate

[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"

